style.css
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local('Lato Bold'), local('Lato-Bold'), url(Assets/Fonts/Lato-Bold.ttf) format("truetype");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

body {
  font-family: 'Lato', sans-serif;
  background-color: #160f19;
  margin: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-track {
  background: linear-gradient(#1e8dff, #3c9dfe);
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: #ffffff;

}

::-webkit-scrollbar-corner {
  background: #3c9dfe;
}

.topbanner {
  position: absolute;
  width: 100%;
  height: 140px;
  background-image: linear-gradient(#1e8dff, #3c9dfe);
  color: white;
  display: inline-block;
  z-index: 9999;
  white-space: nowrap;
}

.topbanner h1 {
  font-size: 80px;
  line-height: 140px;
  z-index: 9999;
  display: inline-block;
  vertical-align: middle;
  margin: auto;
}

.bannertwo {
  position: absolute;
  padding-top: 140px;
  height: 35px;
  width: 100%;
  margin-top: 5px;
  display: inline-flex;
  align-items: center;
  z-index: 9999;
}

.bbmasc {
  line-height: 140px;
  display: inline-block;
  vertical-align: middle;
  z-index: 9999;
  margin-top: 16px;
  margin-left: 150px;
  margin-right: 134px;
}

.main {
  padding-top: 175px;
  display: grid;
  margin-top: 20px;
  position: absolute;
  overflow-y: auto;
  overflow-x: auto;
}

.dropdowns {
  display: inline-flex;
  margin-top: 5px;
}

.destroyer,
.battleship,
.carrier,
.heavycruiser,
.lightcruiser,
.submarine {
  display: inline-flex;
  height: 428px;
}

.destroyerbanner,
.battleshipbanner,
.carrierbanner,
.heavycruiserbanner,
.lightcruiserbanner,
.submarinebanner {
  display: inline-flex;
}

.all {
  margin-bottom: 20px;
}

.parent {
  display: inline-flex;
  width: 100px;
  height: 118px;
  margin-top: 5px;
  margin-right: 10px;
}

.thumbnail,
.link {
  z-index: 0;
  position: absolute;
  width: 100px;
  height: 100px;
}

.thumbnail {
  z-index: 1;
  height: 120px;
}

.link {
  z-index: 95;
}

.tag1,
.tag2,
.tag3,
.tag4 {
  z-index: 2;
  position: absolute;
  margin-top: 75px;
}

.tag2 {
  margin-left: 25px;
}

.tag3 {
  margin-left: 50px;
}

.tag4 {
  margin-left: 75px;
}

.tag1.show,
.tag2.show,
.tag3.show,
.tag4.show {
  display: block;
}

.tierchanges {
  z-index: 1;
  position: absolute;
  margin-top: 120px;
  height: 25px;
  width: 100px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  font-size: 20px;
}

.bannerleft {
  z-index: 2;
  position: absolute;
  height: 100px;
  width: 100px;
}

.text_en,
.text_jp,
.text_kr,
.text_cn {
  margin-top: 100px;
  margin-left: 32px;
  height: 20px;
  line-height: 20px;
  display: none;
}

.text_en.show,
.text_jp.show,
.text_kr.show,
.text_cn.show {
  display: block;
}

.shipname,
.shipnamealt {
  font-size: 12px;
  width: 68px;
  text-align: center;
  text-shadow: 2px 1px #00000070;
  color: white;
  z-index: 10;
  position: absolute;
  overflow: hidden;
  text-overflow: ellipsis;
  line-break: auto;
}

.shipnamealt {
  line-height: 9px;
}

div.t0>div.tierbanner,
div.t1>div.tierbanner,
div.t2>div.tierbanner,
div.t3>div.tierbanner,
div.t4>div.tierbanner,
div.t5>div.tierbanner,
div.t6>div.tierbanner,
div.t7>div.tierbanner {
  background-image: linear-gradient(#ff6d00, #ff9900);
  border-radius: 10px;
  text-align: center;
  text-shadow: 4px 2px #00000070;
  height: 45px;
  line-height: 45px;
  color: white;
  font-size: 48px;
  margin-bottom: 5px;
}

div.t1>div.tierbanner {
  background-image: linear-gradient(#fe016e, #fe012f);
}

div.t2>div.tierbanner {
  background-image: linear-gradient(#ff0a96, #ff5cd1);
}

div.t3>div.tierbanner {
  background-image: linear-gradient(#b002ff, #9320ff);
}

div.t4>div.tierbanner {
  background-image: linear-gradient(#009eff, #0056fe);
}

div.t5>div.tierbanner,
div.t6>div.tierbanner,
div.t7>div.tierbanner {
  background-image: linear-gradient(#009eff, #0056fe);
}

.hulltype-dropbtn,
.rarity-dropbtn,
.nationality-dropbtn,
.tags-dropbtn {
  background-image: linear-gradient(#3c9dfe, #1e8dff);
  color: white;
  font-size: 22px;
  cursor: pointer;
  height: 37px;
  border: 1px solid white;
  border-radius: 5px;
  text-align: center;
  text-shadow: 2px 1px #00000070;
  margin-right: 10px;
  white-space: nowrap;
}

.tierfiltercontainer {
  width: 280px;
  height: 35px;
  border: 1px solid white;
  border-radius: 5px;
  display: inline-flex;
  margin-left: 85px;
  margin-top: 5px;
  margin-right: 10px;
}


.hulltype-dropbtn:hover,
.hulltype-dropbtn:focus,
.rarity-dropbtn:hover,
.rarity-dropbtn:focus,
.nationality-dropbtn:hover,
.nationality-dropbtn:focus,
.tags-dropbtn:hover,
.tags-dropbtn:focus,
.changelogbtn:hover,
.changelogbtn:focus {
  background: #1d61a6;
  border: 1px solid white;
}

.hulltype-dropdown-content,
.rarity-dropdown-content,
.nationality-dropdown-content,
.tags-dropdown-content {
  background-image: linear-gradient(#1e8dff, #3c9dfe);
  margin-top: 15px;
  display: none;
  position: absolute;
  background-color: #3c9dfe;
  min-width: 80px;
  width: 105.7px;
  max-width: 160px;
  min-height: 65px;
  z-index: 99;
  border-width: 1px;
  border-style: solid;
  border-color: white;
  border-radius: 10px;
  text-align: center;
  color: white;
  cursor: pointer;
}

.nationality-dropdown-content {
  width: 116.72px;
}

.tags-dropdown-content {
  width: 49.48px;
  min-width: 0px;
}

.rarity-dropdown-content {
  width: 71.45px;
  min-width: 0px;
}

.hulltype-dropdown-content.show,
.rarity-dropdown-content.show,
.nationality-dropdown-content.show,
.tags-dropdown-content.show {
  display: block;
}
/* ... */

